# l2-writing-revision-pipeline

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  mailmap.txt
crates/kslog_cli/: Cargo.toml  EXPLAINED.md  README.md
crates/kslog_cli/src/: lib.rs  main.rs
crates/kslog_extract/: Cargo.toml  EXPLAINED.md  README.md
crates/kslog_extract/src/: lib.rs
crates/kslog_micro_episode/: Cargo.toml  EXPLAINED.md  README.md
crates/kslog_micro_episode/src/: lib.rs
crates/kslog_no_oracle_audit/: Cargo.toml  EXPLAINED.md  README.md
crates/kslog_no_oracle_audit/src/: lib.rs
crates/kslog_replay/: Cargo.toml  EXPLAINED.md  README.md
crates/kslog_replay/src/: lib.rs  utf16_offsets.rs
crates/kslog_replay/tests/: utf16_offsets.rs
docs/: 00_project_overview.md  01_beginner_guide.md  02_system_architecture.md  03_no_oracle_policy.md  04_raw_event_schema.md  05_text_replay_spec.md  06_revision_event_spec.md  07_micro_episode_spec.md  08_candidate_generation_spec.md  09_ot_scoring_spec.md  10_data_quality_policy.md  11_public_release_policy.md  12_synthetic_data_policy.md  README.md  actions_node_deprecation_warning_handling_design.md  codex_workflow.md  config_aware_scorer_function_design.md  config_enabled_e2e_design.md  config_enabled_summary_collector_design.md  decision_log.md  default_unchanged_config_support_design.md  diagnostic_summary_tooling_plan.md  diagnostic_to_scoring_boundary_review.md  documentation_policy.md  evaluation_spec.md  existing_ci_action_versions_audit_design.md  existing_ci_checkout_update_remote_run_record_workflow.md  explicit_config_cli_option_design.md  explicit_config_ranking_diff_plan.md  filled_observation_note_public_sharing_checklist.md  forbidden_term_path_safety_test_hardening_design.md  frozen_policy_generation_actual_controlled_artifact_body_generation_runtime_invocation_design.md  frozen_policy_generation_actual_controlled_artifact_body_generation_runtime_invocation_fixture_schema_contract_design.md  frozen_policy_generation_actual_controlled_artifact_body_generation_runtime_invocation_fixture_validator_design.md  frozen_policy_generation_actual_controlled_artifact_body_generation_runtime_invocation_fixture_validator_makefile_target_design.md  frozen_policy_generation_actual_controlled_artifact_body_generation_runtime_invocation_implementation_refinement_design.md  (+392 more)
scripts/: check_config_enabled_e2e_smoke.sh  (+11 more)
(+3163 files in other folders)
