[package]
name = "kslog_extract"
version = "0.1.0"
edition.workspace = true
description = "Initial revision-event extraction from validated synthetic raw event sequences."

[dependencies]
kslog_schema = { path = "../kslog_schema" }
kslog_replay = { path = "../kslog_replay" }

[dev-dependencies]
kslog_validate = { path = "../kslog_validate" }
serde_json = "1"

