[package]
name = "kslog_micro_episode"
version = "0.1.0"
edition.workspace = true
description = "Initial micro-episode construction from synthetic revision events."

[dependencies]
kslog_extract = { path = "../kslog_extract" }
kslog_schema = { path = "../kslog_schema" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
kslog_validate = { path = "../kslog_validate" }
serde_json = "1"
