[package]
name = "kslog_replay"
version = "0.1.0"
edition.workspace = true
description = "Deterministic text replay for validated synthetic keystroke-level raw events."

[dependencies]
kslog_schema = { path = "../kslog_schema" }

[dev-dependencies]
kslog_validate = { path = "../kslog_validate" }
serde_json = "1"

